初始化了a.html的内容

--- a/a.html
+++ b/a.html
@@ -19,6 +19,7 @@
             height: 100px;
             margin: 100px;
             background-color: pink;
+            border: 1px solid #ccc;
         }
     </style>
 </head>
