--- a/a.html
+++ b/a.html
@@ -26,7 +26,7 @@
 <body>
     <img src="/images/shouji1.png" alt="" id="angel">
     <div>
-
+aaa
     </div>
     <script>
         var div = document.querySelector('div');
